chore: change title

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="container px-3 sm:px-6 py-10">
           <header>
             <h1 class="text-center tracking-tight text-2xl sm:text-4xl font-semibold mx-auto dark:text-neutral-50">
-              Сайт закрыт на переработку
+              Сайт отключен на технические работы
             </h1>
             <p class="text-center tracking-tight text-base sm:text-lg mt-2 text-neutral-500 dark:text-neutral-400 font-normal max-w-[250px] sm:max-w-full mx-auto">
               Все функции личного кабинета доступны в Telegram-боте
